{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 17,
  "lineage": "475365a3-d5c5-91b4-ed63-133a5519776e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-24T13:07:48.597-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lab-1-451405/global/firewalls/pal-flask-fw",
            "log_config": [],
            "name": "pal-flask-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/global/networks/pal-vpc",
            "priority": 1000,
            "project": "lab-1-451405",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/global/firewalls/pal-flask-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-24T13:07:48.597-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lab-1-451405/global/firewalls/pal-ssh-fw",
            "log_config": [],
            "name": "pal-ssh-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/global/networks/pal-vpc",
            "priority": 1000,
            "project": "lab-1-451405",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/global/firewalls/pal-ssh-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "flask_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/zones/us-central1-a/disks/pal-flask-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-24T13:08:11.011-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/lab-1-451405/zones/us-central1-a/instances/pal-flask-vm",
            "instance_id": "5857337003935008069",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "7mpA0JZdYdA=",
            "metadata_startup_script": "#!/bin/bash\r\napt update\r\napt install -y docker.io supervisor\r\n\r\ncat \u003c\u003cEOL \u003e /etc/supervisor/conf.d/flask.conf\r\n[program:flask]\r\ncommand=/usr/bin/docker run -p 5000:5000 us-central1-docker.pkg.dev/lab-1-451405/my-repo/flask-app:v1\r\nautostart=true\r\nautorestart=true\r\nstderr_logfile=/var/log/flask.err.log\r\nstdout_logfile=/var/log/flask.out.log\r\nEOL\r\n\r\nsystemctl enable supervisor\r\nsystemctl start supervisor || service  [...]
            "name": "pal-flask-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.195.96",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/global/networks/pal-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/regions/us-central1/subnetworks/pal-public-subnet",
                "subnetwork_project": "lab-1-451405"
              }
            ],
            "project": "lab-1-451405",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/zones/us-central1-a/instances/pal-flask-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "flask"
            ],
            "tags_fingerprint": "7PEghTEp9kg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/lab-1-451405/global/networks/pal-vpc",
            "mtu": 0,
            "name": "pal-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4707388308186727813",
            "numeric_id": "4707388308186727813",
            "project": "lab-1-451405",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/global/networks/pal-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-24T13:07:48.883-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/lab-1-451405/regions/us-central1/subnetworks/pal-public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "pal-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/global/networks/pal-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "lab-1-451405",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-1-451405/regions/us-central1/subnetworks/pal-public-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6201042096804857211
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}